--- a/ys.html
+++ b/ys.html
@@ -13,7 +13,7 @@
 <li><a href="f.html">風系角</a></li>
 <img src="1.jpg" width="200" height="200"/>
 <li><a href="y.html">岩系角</a></li>
-<img src= "2.jpg" width= "200" height="200" />
+<img src= "2.jpg" width= "200" height="200" >
 <li><a href="l.html">雷系角</a></li>
 <img src= "3.jpg" width= "200" height="200" />
 <li><a href="c.html">草系角</a></li>
