--- a/ys.html
+++ b/ys.html
@@ -15,15 +15,15 @@
 <li><a href="y.html">岩系角</a></li>
 <img src= "2.jpg" width= "200" height="200" >
 <li><a href="l.html">雷系角</a></li>
-<img src= "3.jpg" width= "200" height="200" />
+<img src= "3.jpg" width="200"height="200">
 <li><a href="c.html">草系角</a></li>
-<img src= "4.jpg" width= "200" height="200" />
+<img src="4.jpg"width="200"height="200"/>
 <li><a href="s.html">水系角</a></li>
-<img src= "5.jpg" width= "200" height="200" />
+<img src="5.jpg"/width="200"height="200"/>
 <li><a href="h.html">火系角</a></li>
-<img src= "6.jpg" width= "200" height="200" />
+<img src= "6.jpg"/width="200"height="200">
 <li><a href="b.html">冰系角</a></li>
-<img src= "7.jpg" width= "200" height="200" />
+<img src= "7.jpg"width="200"height="200">
 </ul>
 </body>
 </html>
