--- a/ys.html
+++ b/ys.html
@@ -11,19 +11,19 @@
 <li><a href="zj.html">主角</a></li>
 <br>
 <li><a href="f.html">風系角</a></li>
-<img src="1.jpg" width="200" height="200"/>
+<a href="f.html"><img src= "1.jpg" width= "200" height="200" /></a>
 <li><a href="y.html">岩系角</a></li>
-<img src= "2.jpg" width= "200" height="200" >
+<a href="y.html"><img src= "2.jpg" width= "200" height="200" /></a>
 <li><a href="l.html">雷系角</a></li>
-<img src= "3.jpg" width="200"height="200">
+<a href="l.html"><img src= "3.jpg" width= "200" height="200" /></a>
 <li><a href="c.html">草系角</a></li>
-<img src="4.jpg"width="200"height="200"/>
+<a href="c.html"><img src= "4.jpg" width= "200" height="200" /></a>
 <li><a href="s.html">水系角</a></li>
-<img src="5.jpg"/width="200"height="200"/>
+<a href="s.html"><img src= "5.jpg" width= "200" height="200" /></a>
 <li><a href="h.html">火系角</a></li>
-<img src= "6.jpg"/width="200"height="200">
+<a href="h.html"><img src= "6.jpg" width= "200" height="200" /></a>
 <li><a href="b.html">冰系角</a></li>
-<img src= "7.jpg"width="200"height="200">
+<a href="b.html"><img src= "7.jpg" width= "200" height="200" /></a>
 </ul>
 </body>
 </html>
