--- a/ys.html
+++ b/ys.html
@@ -11,7 +11,7 @@
 <li><a href="zj.html">主角</a></li>
 <br>
 <li><a href="f.html">風系角</a></li>
-<a href="f.html"><img src= "1.jpg" width= "200" height="200" /></a>
+<a href="f.html"><img src= "1.JPG" width= "200" height="200" /></a>
 <li><a href="y.html">岩系角</a></li>
 <a href="y.html"><img src= "2.jpg" width= "200" height="200" /></a>
 <li><a href="l.html">雷系角</a></li>
