--- a/zj.html
+++ b/zj.html
@@ -14,11 +14,11 @@
 <li>空</li>
 <p>CV:鹿喑</p>
 <p>被迫分離，踏上了尋找唯一血親的旅程</p>
-<img src= "k.jpg" width= "220" height="350" />
+<img src= "k.JPG" width= "220" height="350" />
 <li>熒</li>
 <p>CV:宴寧</p>
 <p>被迫分離，踏上了尋找唯一血親的旅程</p>
-<img src= "y.jpg" width= "220" height="350" />
+<img src= "y.JPG" width= "220" height="350" />
 </ul>
 <a href="ys.html">上一頁</a>
 </body>
