--- a/c.html
+++ b/c.html
@@ -13,21 +13,21 @@
 <p>七神之一</p>
 <p>被賢者們軟禁在「淨善宮」(真實身份是草神「小吉祥草王」，可能是耗盡力量的「大慈樹王」)，神名為「帕爾」，智慧之神</p>
 <p>3.1版本還沒出</p>
-<img src= "nxd.jpg" width= "300" height="310" />
+<img src= "nxd.JPG" width= "300" height="310" />
 <li>提納里</li>
 <p>CV:莫然</p>
 <p>五星角</p>
 <p>武器:弓</p>
 <p>所屬:須彌</p>
 <p>道成林的巡林官</p>
-<img src= "tnl.jpg" width= "220" height="560" />
+<img src= "tnl.JPG" width= "220" height="560" />
 <li>柯萊</li>
 <p>CV:秦文靜</p>
 <p>四星角</p>
 <p>武器:弓</p>
 <p>所屬:須彌</p>
 <p>天真開朗的見習巡林員</p>
-<img src= "kl.jpg" width= "220" height="530" />
+<img src= "kl.JPG" width= "220" height="530" />
 </ul>
 <a href="ys.html">上一頁</a>
 </body>
