--- a/h.html
+++ b/h.html
@@ -17,70 +17,70 @@
 <p>武器:弓</p>
 <p>所屬:稻妻</p>
 <p>全名長野原宵宮，才華橫溢的煙花工匠。「長野原煙花店」現任店主，被譽為「夏祭的女王」</p>
-<img src= "xg.jpg" width= "220" height="500" />
+<img src= "xg.JPG" width= "220" height="500" />
 <li>胡桃</li>
 <p>CV:陶典</p>
 <p>五星角</p>
 <p>武器:長柄</p>
 <p>所屬:璃月</p>
 <p>「往生堂」第七十七代堂主</p>
-<img src= "ht.jpg" width= "220" height="520" />
+<img src= "ht.JPG" width= "220" height="520" />
 <li>可莉</li>
 <p>CV:花玲</p>
 <p>五星角</p>
 <p>武器:法器</p>
 <p>所屬:蒙德</p>
 <p>西風騎士團火花騎士，禁閉室常客，人稱「逃跑的太陽」</p>
-<img src= "xkl.jpg" width= "220" height="500" />
+<img src= "xkl.JPG" width= "220" height="500" />
 <li>迪盧克</li>
 <p>CV:馬洋</p>
 <p>五星角</p>
 <p>武器:雙手劍</p>
 <p>所屬:蒙德</p>
 <p>蒙德城的第一富豪，凱亞的義兄,曾是西風騎士團的騎兵隊長，暗夜英雄</p>
-<img src= "dlk.jpg" width= "220" height="560" />
+<img src= "dlk.JPG" width= "220" height="560" />
 <li>托馬</li>
 <p>CV:張沛</p>
 <p>四星角</p>
 <p>武器:長柄</p>
 <p>所屬:稻妻</p>
 <p>蒙德出身，神里家的家僕，活躍稻妻的「地頭蛇」</p>
-<img src= "tm.jpg" width= "220" height="610" />
+<img src= "tm.JPG" width= "220" height="610" />
 <li>煙緋</li>
 <p>CV:蘇子蕪</p>
 <p>四星角</p>
 <p>武器:法器</p>
 <p>所屬:璃月</p>
 <p>璃月的律法咨詢師</p>
-<img src= "yf.jpg" width= "220" height="520" />
+<img src= "yf.JPG" width= "220" height="520" />
 <li>辛焱</li>
 <p>CV:王雅欣</p>
 <p>四星角</p>
 <p>武器:雙手劍</p>
 <p>所屬:璃月</p>
 <p>璃月唯一的搖滾歌手</p>
-<img src= "xy.jpg" width= "220" height="480" />
+<img src= "xy.JPG" width= "220" height="480" />
 <li>班尼特</li>
 <p>CV:穆雪婷</p>
 <p>四星角</p>
 <p>武器:單手劍</p>
 <p>所屬:蒙德</p>
 <p>冒險家協會為數不多的年輕冒險家，一直被莫名的「不幸」所糾纏</p>
-<img src= "bnt.jpg" width= "220" height="530" />
+<img src= "bnt.JPG" width= "220" height="530" />
 <li>香菱</li>
 <p>CV:小N</p>
 <p>四星角</p>
 <p>武器:長柄</p>
 <p>所屬:璃月</p>
 <p>香菱出身廚師世家，家族在璃月港經營餐廳「萬民堂」多年</p>
-<img src= "xl.jpg" width= "220" height="480" />
+<img src= "xl.JPG" width= "220" height="480" />
 <li>安柏</li>
 <p>CV:牛奶君→蔡書瑾</p>
 <p>四星角</p>
 <p>武器:弓</p>
 <p>所屬:蒙德</p>
 <p>西風騎士團所屬偵察騎士</p>
-<img src= "ab.jpg" width= "220" height="520" />
+<img src= "ab.JPG" width= "220" height="520" />
 </ul>
 <a href="ys.html">上一頁</a>
 </body>
